# serializer version: 1
# name: test_graphic_frame_new_chart_graphic_frame
  '''
  <p:graphicFrame xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main">
    <p:nvGraphicFramePr>
      <p:cNvPr id="42" name="foobar"/>
      <p:cNvGraphicFramePr>
        <a:graphicFrameLocks noGrp="1"/>
      </p:cNvGraphicFramePr>
      <p:nvPr/>
    </p:nvGraphicFramePr>
    <p:xfrm>
      <a:off x="1" y="2"/>
      <a:ext cx="3" cy="4"/>
    </p:xfrm>
    <a:graphic>
      <a:graphicData uri="http://schemas.openxmlformats.org/drawingml/2006/chart">
        <c:chart xmlns:c="http://schemas.openxmlformats.org/drawingml/2006/chart" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" r:id="rId6"/>
      </a:graphicData>
    </a:graphic>
  </p:graphicFrame>
  
  '''
# ---
# name: test_graphic_frame_new_graphic_frame
  '''
  <p:graphicFrame xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main">
    <p:nvGraphicFramePr>
      <p:cNvPr id="42" name="foobar"/>
      <p:cNvGraphicFramePr>
        <a:graphicFrameLocks noGrp="1"/>
      </p:cNvGraphicFramePr>
      <p:nvPr/>
    </p:nvGraphicFramePr>
    <p:xfrm>
      <a:off x="1" y="2"/>
      <a:ext cx="3" cy="4"/>
    </p:xfrm>
    <a:graphic>
      <a:graphicData/>
    </a:graphic>
  </p:graphicFrame>
  
  '''
# ---
# name: test_graphic_frame_new_ole_object_graphic_frame
  '''
  <p:graphicFrame xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <p:nvGraphicFramePr>
      <p:cNvPr id="42" name="foobar"/>
      <p:cNvGraphicFramePr>
        <a:graphicFrameLocks noGrp="1"/>
      </p:cNvGraphicFramePr>
      <p:nvPr/>
    </p:nvGraphicFramePr>
    <p:xfrm>
      <a:off x="1" y="2"/>
      <a:ext cx="3" cy="4"/>
    </p:xfrm>
    <a:graphic>
      <a:graphicData uri="http://schemas.openxmlformats.org/presentationml/2006/ole">
        <p:oleObj showAsIcon="1" r:id="rId1" imgW="10" imgH="20" progId="Excel.Sheet.12">
          <p:embed/>
          <p:pic>
            <p:nvPicPr>
              <p:cNvPr id="0" name=""/>
              <p:cNvPicPr/>
              <p:nvPr/>
            </p:nvPicPr>
            <p:blipFill>
              <a:blip r:embed="rId2"/>
              <a:stretch>
                <a:fillRect/>
              </a:stretch>
            </p:blipFill>
            <p:spPr>
              <a:xfrm>
                <a:off x="1" y="2"/>
                <a:ext cx="3" cy="4"/>
              </a:xfrm>
              <a:prstGeom prst="rect">
                <a:avLst/>
              </a:prstGeom>
            </p:spPr>
          </p:pic>
        </p:oleObj>
      </a:graphicData>
    </a:graphic>
  </p:graphicFrame>
  
  '''
# ---
# name: test_graphic_frame_new_table_graphic_frame
  '''
  <p:graphicFrame xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main">
    <p:nvGraphicFramePr>
      <p:cNvPr id="42" name="foobar"/>
      <p:cNvGraphicFramePr>
        <a:graphicFrameLocks noGrp="1"/>
      </p:cNvGraphicFramePr>
      <p:nvPr/>
    </p:nvGraphicFramePr>
    <p:xfrm>
      <a:off x="1" y="2"/>
      <a:ext cx="3" cy="4"/>
    </p:xfrm>
    <a:graphic>
      <a:graphicData uri="http://schemas.openxmlformats.org/drawingml/2006/table">
        <a:tbl>
          <a:tblPr firstRow="1" bandRow="1">
            <a:tableStyleId>{5C22544A-7EE6-4342-B048-85BDC9FD1C3A}</a:tableStyleId>
          </a:tblPr>
          <a:tblGrid>
            <a:gridCol w="1"/>
            <a:gridCol w="1"/>
            <a:gridCol w="1"/>
          </a:tblGrid>
          <a:tr h="2">
            <a:tc>
              <a:txBody>
                <a:bodyPr/>
                <a:lstStyle/>
                <a:p/>
              </a:txBody>
              <a:tcPr/>
            </a:tc>
            <a:tc>
              <a:txBody>
                <a:bodyPr/>
                <a:lstStyle/>
                <a:p/>
              </a:txBody>
              <a:tcPr/>
            </a:tc>
            <a:tc>
              <a:txBody>
                <a:bodyPr/>
                <a:lstStyle/>
                <a:p/>
              </a:txBody>
              <a:tcPr/>
            </a:tc>
          </a:tr>
          <a:tr h="2">
            <a:tc>
              <a:txBody>
                <a:bodyPr/>
                <a:lstStyle/>
                <a:p/>
              </a:txBody>
              <a:tcPr/>
            </a:tc>
            <a:tc>
              <a:txBody>
                <a:bodyPr/>
                <a:lstStyle/>
                <a:p/>
              </a:txBody>
              <a:tcPr/>
            </a:tc>
            <a:tc>
              <a:txBody>
                <a:bodyPr/>
                <a:lstStyle/>
                <a:p/>
              </a:txBody>
              <a:tcPr/>
            </a:tc>
          </a:tr>
        </a:tbl>
      </a:graphicData>
    </a:graphic>
  </p:graphicFrame>
  
  '''
# ---
